# EOffer

./: CMakeLists.txt  README.md
ide/: README.md
source/: CMakeLists.txt
source/capture_one/: CMakeLists.txt  main.cpp
source/capture_two/: CMakeLists.txt  EMyString.cpp  EMyString.h  main.cpp
source/platform/: CMakeLists.txt  EFormatFactory.cpp  EFormatFactory.h  EFormatManual.cpp  EFormatManual.h  EImageDef.h  ELibDef.h  EMacro.h  EPlatform.vcxproj  EPlatform.vcxproj.filters  ESingleton.h
